1-vpc.tf
resource "aws_vpc" "main" {
	cidr_block = var.vpc_cidr_block
	
	tags = {
		Name = var.vpc_name
}
}
